// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExecutionLandingPage /> tests for CI loading state - snapshot test for CI module 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main PageSpinner--spinner StyledProps--flex StyledProps--flex-align-center-center"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main PageSpinner--content"
      style="align-items: center; width: 500px;"
    >
      <span
        class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey600"
        data-icon="steps-spinner"
      >
        <svg
          height="32"
          viewBox="0 0 128 128"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <path
              d="M122.5 69.25H96.47a33.1 33.1 0 000-10.5h26.05a5.25 5.25 0 010 10.5z"
              fill="#ff8e02"
            />
            <path
              d="M112.04 97.83L89.47 84.8a33.1 33.1 0 005.25-9.1l22.57 13.03a5.25 5.25 0 01-5.28 9.1zM88.68 117.35L75.65 94.78a33.1 33.1 0 009.1-5.25l13.02 22.57a5.25 5.25 0 11-9.1 5.25zM58.7 122.57V96.5a33.1 33.1 0 0010.5 0v26.07a5.25 5.25 0 01-10.5 0zM30.1 112.1l13.04-22.57a33.1 33.1 0 009.1 5.25L39.2 117.35a5.25 5.25 0 11-9.1-5.25zM10.6 88.74L33.16 75.7a33.1 33.1 0 005.25 9.1L15.88 97.83a5.25 5.25 0 11-5.25-9.1z"
              fill="#ffddb3"
              fill-opacity="0.3"
            />
            <path
              d="M5.37 58.75h26.06a33.1 33.1 0 000 10.5H5.37a5.25 5.25 0 010-10.5z"
              fill="#ffd29a"
              fill-opacity="0.4"
            />
            <path
              d="M15.85 30.17L38.4 43.2a33.1 33.1 0 00-5.24 9.1L10.6 39.25a5.25 5.25 0 115.25-9.1z"
              fill="#ffc680"
              fill-opacity="0.5"
            />
            <path
              d="M39.2 10.65l13.03 22.57a33.1 33.1 0 00-9.1 5.25l-13-22.57a5.25 5.25 0 119.1-5.25z"
              fill="#ffbb67"
              fill-opacity="0.6"
            />
            <path
              d="M69.2 5.43V31.5a33.1 33.1 0 00-10.5 0V5.42a5.25 5.25 0 1110.5 0z"
              fill="#ffb04d"
              fill-opacity="0.7"
            />
            <path
              d="M97.77 15.9L84.75 38.47a33.1 33.1 0 00-9.1-5.25l13.03-22.57a5.25 5.25 0 119.1 5.25z"
              fill="#ffa535"
              fill-opacity="0.8"
            />
            <path
              d="M117.3 39.26L94.7 52.3a33.1 33.1 0 00-5.25-9.1l22.57-13.03a5.25 5.25 0 015.25 9.1z"
              fill="#ff991b"
              fill-opacity="0.9"
            />
            <animatetransform
              attributeName="transform"
              calcMode="discrete"
              dur="1200ms"
              repeatCount="indefinite"
              type="rotate"
              values="0 64 64;30 64 64;60 64 64;90 64 64;120 64 64;150 64 64;180 64 64;210 64 64;240 64 64;270 64 64;300 64 64;330 64 64"
            />
          </g>
        </svg>
      </span>
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-align-center StyledProps--color StyledProps--color-grey600"
      >
        Loading, please wait...
      </p>
    </div>
  </div>
  <main
    class="main"
  >
    <div
      class="lhs"
    >
      <header
        class="header"
      >
        <header
          class="header"
        >
          <div
            class="headerTopRow"
          >
            <div
              class="Layout--horizontal StyledProps--main Breadcrumbs--breadcrumbs StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
            >
              <div
                class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
              >
                <a
                  class="Breadcrumbs--breadcrumb"
                  href="/account/TEST_ACCOUNT_ID/ci"
                >
                  <span
                    class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                    data-icon="ci-main"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 32 32"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M29 16a13.02 13.02 0 01-.854 4.6.387.387 0 01-.637.13l-3.99-3.94a.534.534 0 01-.085-.628c.432-.827.649-1.773.649-2.762.056-3.222-2.6-5.878-5.879-5.878-1.04 0-1.994.26-2.823.706a.53.53 0 01-.623-.08l-3.551-3.504a.48.48 0 01.154-.794A12.79 12.79 0 0116 3c7.178 0 13 5.822 13 13zM8.476 5.42a.582.582 0 01.746.072l4.035 4.035c.179.178.194.46.054.67a5.829 5.829 0 00-.985 3.26 5.934 5.934 0 005.935 5.934 5.829 5.829 0 003.26-.985.531.531 0 01.67.054l4.367 4.368a.582.582 0 01.065.756C24.225 26.86 20.4 29 16 29 8.822 29 3 23.178 3 16c0-4.403 2.144-8.231 5.476-10.58zm9.785 11.71a3.932 3.932 0 003.956-3.956 3.932 3.932 0 00-3.956-3.957 3.932 3.932 0 00-3.957 3.957 3.932 3.932 0 003.957 3.956z"
                        fill="url(#ci-main_svg__a)"
                        fill-rule="evenodd"
                      />
                      <defs>
                        <lineargradient
                          gradientUnits="userSpaceOnUse"
                          id="ci-main_svg__a"
                          x1="-5.398"
                          x2="11.398"
                          y1="11.398"
                          y2="37.398"
                        >
                          <stop
                            stop-color="#73DFE7"
                          />
                          <stop
                            offset="1"
                            stop-color="#0095F7"
                          />
                        </lineargradient>
                      </defs>
                    </svg>
                  </span>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
                  >
                    TEST_PROJECT
                  </p>
                </a>
                <span
                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
                  data-icon="main-chevron-right"
                >
                  <svg
                    height="8"
                    viewBox="0 0 8 14"
                    width="8"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                      fill="#4d5969"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
              >
                <a
                  class="Breadcrumbs--breadcrumb"
                  href="/account/TEST_ACCOUNT_ID/ci/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
                  >
                    pipelines
                  </p>
                </a>
                <span
                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
                  data-icon="main-chevron-right"
                >
                  <svg
                    height="8"
                    viewBox="0 0 8 14"
                    width="8"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                      fill="#4d5969"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
              >
                <a
                  class="Breadcrumbs--breadcrumb"
                  href="/account/TEST_ACCOUNT_ID/ci/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
                  >
                    common.pipeline
                  </p>
                </a>
                <span
                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
                  data-icon="main-chevron-right"
                >
                  <svg
                    height="8"
                    viewBox="0 0 8 14"
                    width="8"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                      fill="#4d5969"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="actionsBar"
            >
              <span
                class="StyledProps--font StyledProps--main duration StyledProps--inline"
                style="display: inline-flex; align-items: center;"
              >
                <span
                  class="bp3-icon bp3-icon-time StyledProps--main Text--icon StyledProps--padding-right-xsmall"
                  icon="time"
                >
                  <svg
                    data-icon="time"
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                  >
                    <desc>
                      time
                    </desc>
                    <path
                      d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm1-6.41V4c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .28.11.53.29.71l2 2a1.003 1.003 0 001.42-1.42L9 7.59z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                 
                
              </span>
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-secondary Button--size Button--small"
                type="button"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                  data-icon="main-view"
                >
                  <svg
                    height="16"
                    viewBox="0 0 14 9"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7 3.5c-.5 0-.9.4-.9.9s.4.9.9.9.9-.4.9-.9-.4-.9-.9-.9zm7 .9c0-.1 0-.1 0 0 0-.2-.1-.3-.1-.4-.4-.6-1-1.1-1.5-1.6-1.2-1-2.5-1.9-4-2.2C7.5 0 6.7-.1 5.8.1 5 .3 4.3.6 3.6 1c-1.1.6-2.1 1.5-3 2.4-.2.2-.3.4-.5.6-.1.2-.1.5 0 .8.4.6 1 1.1 1.5 1.6 1.2 1 2.5 1.9 4 2.2.8.2 1.7.2 2.6 0 .8-.1 1.5-.4 2.2-.8 1.1-.6 2.1-1.5 3-2.4.2-.2.3-.4.5-.6 0-.1.1-.2.1-.3v-.1zM7 7C5.6 7 4.4 5.8 4.4 4.4S5.6 1.7 7 1.7s2.6 1.2 2.6 2.6S8.5 7 7 7z"
                      fill="#4d5969"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  common.viewText
                </span>
              </button>
              <div
                class="main"
              >
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main more Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                      type="button"
                    >
                      <span
                        class="bp3-icon bp3-icon-more StyledProps--main"
                        icon="more"
                      >
                        <svg
                          data-icon="more"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            more
                          </desc>
                          <path
                            d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="titleContainer"
          >
            <div
              class="title"
            />
            <div
              class="pipelineId"
            >
              execution.pipelineIdentifierTextCI
            </div>
          </div>
        </header>
        <div
          class="main"
        >
          <div
            class="metaContainer"
          />
          <div
            class="userLabelContainer"
          >
            <div
              class="wrapper"
            >
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <div
                    class="userLabel"
                    tabindex="0"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="nav-user-profile"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 24 24"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M11.5 2C5.701 2 1 6.701 1 12.5S5.701 23 11.5 23 22 18.299 22 12.5 17.299 2 11.5 2zm0 3.151a3.152 3.152 0 11-3.152 3.152A3.144 3.144 0 0111.5 5.151zm0 14.936a7.558 7.558 0 01-6.296-3.383c0-2.09 4.197-3.233 6.296-3.233s6.266 1.142 6.296 3.233a7.558 7.558 0 01-6.296 3.354z"
                          fill="#747d88"
                        />
                      </svg>
                    </span>
                    <div
                      class="userDetails"
                    >
                      <p
                        class="StyledProps--font StyledProps--main"
                      >
                        
                      </p>
                    </div>
                  </div>
                </span>
              </span>
            </div>
          </div>
        </div>
      </header>
      <div
        class="main"
      >
        <div>
          <div
            class="bp3-tabs Tabs--main Tabs--horizontal"
          >
            <div
              class="bp3-tab-list"
              role="tablist"
            >
              <div
                class="bp3-tab-indicator-wrapper"
                style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
              >
                <div
                  class="bp3-tab-indicator"
                />
              </div>
              <div
                aria-controls="bp3-tab-panel_execution-tabs_pipeline_view"
                aria-disabled="false"
                aria-expanded="true"
                aria-selected="true"
                class="bp3-tab"
                data-tab-id="pipeline_view"
                id="bp3-tab-title_execution-tabs_pipeline_view"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tabLink"
                  href="/account/TEST_ACCOUNT_ID/ci/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions/TEST_EXECUTION/pipeline"
                >
                  <span
                    class="bp3-icon bp3-icon-alignment-vertical-center StyledProps--main"
                    icon="alignment-vertical-center"
                  >
                    <svg
                      data-icon="alignment-vertical-center"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        alignment-vertical-center
                      </desc>
                      <path
                        d="M13 2H9V1c0-.55-.45-1-1-1S7 .45 7 1v1H3c-.55 0-1 .45-1 1v3c0 .55.45 1 1 1h4v2H6c-.55 0-1 .45-1 1v3c0 .55.45 1 1 1h1v1c0 .55.45 1 1 1s1-.45 1-1v-1h1c.55 0 1-.45 1-1v-3c0-.55-.45-1-1-1H9V7h4c.55 0 1-.45 1-1V3c0-.55-.45-1-1-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span>
                    common.pipeline
                  </span>
                </a>
              </div>
              <div
                aria-controls="bp3-tab-panel_execution-tabs_inputs_view"
                aria-disabled="false"
                aria-expanded="false"
                aria-selected="false"
                class="bp3-tab"
                data-tab-id="inputs_view"
                id="bp3-tab-title_execution-tabs_inputs_view"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tabLink"
                  href="/account/TEST_ACCOUNT_ID/ci/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions/TEST_EXECUTION/inputs"
                >
                  <span
                    class="bp3-icon bp3-icon-manually-entered-data StyledProps--main"
                    icon="manually-entered-data"
                  >
                    <svg
                      data-icon="manually-entered-data"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        manually-entered-data
                      </desc>
                      <path
                        d="M1 8h3.76l2-2H1c-.55 0-1 .45-1 1s.45 1 1 1zm14.49-4.01c.31-.32.51-.76.51-1.24C16 1.78 15.22 1 14.25 1c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.45-1.43zM1 4h7.76l2-2H1c-.55 0-1 .45-1 1s.45 1 1 1zm0 6c-.55 0-1 .45-1 1 0 .48.35.86.8.96L2.76 10H1zm9.95-6.43l-6.69 6.69 2.47 2.47 6.69-6.69-2.47-2.47zm4.25 2.47L13.24 8H15c.55 0 1-.45 1-1 0-.48-.35-.86-.8-.96zM2 15l3.86-1.39-2.46-2.44L2 15zm13-5h-3.76l-2 2H15c.55 0 1-.45 1-1s-.45-1-1-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span>
                    inputs
                  </span>
                </a>
              </div>
              <div
                aria-controls="bp3-tab-panel_execution-tabs_artifacts_view"
                aria-disabled="false"
                aria-expanded="false"
                aria-selected="false"
                class="bp3-tab"
                data-tab-id="artifacts_view"
                id="bp3-tab-title_execution-tabs_artifacts_view"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tabLink"
                  href="/account/TEST_ACCOUNT_ID/ci/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions/TEST_EXECUTION/artifacts"
                >
                  <span
                    class="bp3-icon bp3-icon-add-to-artifact StyledProps--main"
                    icon="add-to-artifact"
                  >
                    <svg
                      data-icon="add-to-artifact"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        add-to-artifact
                      </desc>
                      <path
                        d="M14 4.01h-1v-1c0-.55-.45-1-1-1s-1 .45-1 1v1h-1c-.55 0-1 .45-1 1s.45 1 1 1h1v1c0 .55.45 1 1 1s1-.45 1-1v-1h1c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm-13 2h6c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm8 6H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span>
                    artifacts
                  </span>
                </a>
              </div>
              <div
                aria-controls="bp3-tab-panel_execution-tabs_tests_view"
                aria-disabled="false"
                aria-expanded="false"
                aria-selected="false"
                class="bp3-tab"
                data-tab-id="tests_view"
                id="bp3-tab-title_execution-tabs_tests_view"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tabLink"
                  href="/account/TEST_ACCOUNT_ID/ci/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions/TEST_EXECUTION/tests"
                >
                  <span
                    class="bp3-icon bp3-icon-lab-test StyledProps--main"
                    icon="lab-test"
                  >
                    <svg
                      data-icon="lab-test"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        lab-test
                      </desc>
                      <path
                        d="M11 1a1 1 0 010 2v3l3 7v1.25a.75.75 0 01-.75.75H2.75a.75.75 0 01-.75-.75V13l3-7V3a1 1 0 110-2h6zM9 3H7v3l-1.714 4h5.428L9 6V3z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span>
                    tests
                  </span>
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          class="children"
        />
        <div
          class="viewToggle"
        >
          <span
            data-tooltip-id="consoleViewToggle"
          >
            consoleView
          </span>
          <label
            class="bp3-control bp3-switch"
          >
            <input
              name="console-view-toggle"
              type="checkbox"
            />
            <span
              class="bp3-control-indicator"
            />
          </label>
        </div>
      </div>
      <div
        class="childContainer"
        data-view="graph"
        id="pipeline-execution-container"
      >
        <div
          data-testid="children"
        >
          Execution Landing Page
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`<ExecutionLandingPage /> tests loading state - snapshot test 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main PageSpinner--spinner StyledProps--flex StyledProps--flex-align-center-center"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main PageSpinner--content"
      style="align-items: center; width: 500px;"
    >
      <span
        class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey600"
        data-icon="steps-spinner"
      >
        <svg
          height="32"
          viewBox="0 0 128 128"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <path
              d="M122.5 69.25H96.47a33.1 33.1 0 000-10.5h26.05a5.25 5.25 0 010 10.5z"
              fill="#ff8e02"
            />
            <path
              d="M112.04 97.83L89.47 84.8a33.1 33.1 0 005.25-9.1l22.57 13.03a5.25 5.25 0 01-5.28 9.1zM88.68 117.35L75.65 94.78a33.1 33.1 0 009.1-5.25l13.02 22.57a5.25 5.25 0 11-9.1 5.25zM58.7 122.57V96.5a33.1 33.1 0 0010.5 0v26.07a5.25 5.25 0 01-10.5 0zM30.1 112.1l13.04-22.57a33.1 33.1 0 009.1 5.25L39.2 117.35a5.25 5.25 0 11-9.1-5.25zM10.6 88.74L33.16 75.7a33.1 33.1 0 005.25 9.1L15.88 97.83a5.25 5.25 0 11-5.25-9.1z"
              fill="#ffddb3"
              fill-opacity="0.3"
            />
            <path
              d="M5.37 58.75h26.06a33.1 33.1 0 000 10.5H5.37a5.25 5.25 0 010-10.5z"
              fill="#ffd29a"
              fill-opacity="0.4"
            />
            <path
              d="M15.85 30.17L38.4 43.2a33.1 33.1 0 00-5.24 9.1L10.6 39.25a5.25 5.25 0 115.25-9.1z"
              fill="#ffc680"
              fill-opacity="0.5"
            />
            <path
              d="M39.2 10.65l13.03 22.57a33.1 33.1 0 00-9.1 5.25l-13-22.57a5.25 5.25 0 119.1-5.25z"
              fill="#ffbb67"
              fill-opacity="0.6"
            />
            <path
              d="M69.2 5.43V31.5a33.1 33.1 0 00-10.5 0V5.42a5.25 5.25 0 1110.5 0z"
              fill="#ffb04d"
              fill-opacity="0.7"
            />
            <path
              d="M97.77 15.9L84.75 38.47a33.1 33.1 0 00-9.1-5.25l13.03-22.57a5.25 5.25 0 119.1 5.25z"
              fill="#ffa535"
              fill-opacity="0.8"
            />
            <path
              d="M117.3 39.26L94.7 52.3a33.1 33.1 0 00-5.25-9.1l22.57-13.03a5.25 5.25 0 015.25 9.1z"
              fill="#ff991b"
              fill-opacity="0.9"
            />
            <animatetransform
              attributeName="transform"
              calcMode="discrete"
              dur="1200ms"
              repeatCount="indefinite"
              type="rotate"
              values="0 64 64;30 64 64;60 64 64;90 64 64;120 64 64;150 64 64;180 64 64;210 64 64;240 64 64;270 64 64;300 64 64;330 64 64"
            />
          </g>
        </svg>
      </span>
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-align-center StyledProps--color StyledProps--color-grey600"
      >
        Loading, please wait...
      </p>
    </div>
  </div>
  <main
    class="main"
  >
    <div
      class="lhs"
    >
      <header
        class="header"
      >
        <header
          class="header"
        >
          <div
            class="headerTopRow"
          >
            <div
              class="Layout--horizontal StyledProps--main Breadcrumbs--breadcrumbs StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
            >
              <div
                class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
              >
                <a
                  class="Breadcrumbs--breadcrumb"
                  href="/account/TEST_ACCOUNT_ID/cd"
                >
                  <span
                    class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                    data-icon="cd-main"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 32 32"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M26.427 7.06A5.073 5.073 0 0129 11.52l-.077 8.934a5.073 5.073 0 01-2.537 4.35l-8.002 4.618a5.073 5.073 0 01-5.035.021l-7.776-4.402A5.073 5.073 0 013 20.583l.077-8.935a5.073 5.073 0 012.537-4.35l8.002-4.619a5.073 5.073 0 015.035-.02l7.776 4.402zm-2.83 6.938c-.42 1.586-2.029 2.538-3.601 2.141l-7.489-2.026a4.696 4.696 0 00-3.62.48 4.773 4.773 0 00-2.222 2.925 4.835 4.835 0 00.479 3.664 4.757 4.757 0 002.905 2.251 4.696 4.696 0 003.62-.48 4.773 4.773 0 002.222-2.924l.26-1.047a.25.25 0 00-.177-.302l-1.258-.34a.25.25 0 00-.307.18l-.256 1.025c-.426 1.602-2.064 2.556-3.651 2.127-1.582-.428-2.523-2.073-2.1-3.67.421-1.586 2.03-2.538 3.602-2.142l7.489 2.027a4.696 4.696 0 003.62-.48 4.773 4.773 0 002.222-2.925 4.835 4.835 0 00-.479-3.664 4.757 4.757 0 00-2.905-2.251 4.696 4.696 0 00-3.62.48 4.773 4.773 0 00-2.222 2.924l-.247.828a.25.25 0 00.174.312l1.259.34a.25.25 0 00.304-.169l.248-.827c.426-1.602 2.064-2.557 3.651-2.127 1.582.428 2.523 2.073 2.1 3.67z"
                        fill="url(#cd-main_svg__a)"
                        fill-rule="evenodd"
                      />
                      <defs>
                        <lineargradient
                          gradientUnits="userSpaceOnUse"
                          id="cd-main_svg__a"
                          x1="6.774"
                          x2="21.5"
                          y1="2"
                          y2="30"
                        >
                          <stop
                            stop-color="#62F91F"
                          />
                          <stop
                            offset="1"
                            stop-color="#45BD35"
                          />
                        </lineargradient>
                      </defs>
                    </svg>
                  </span>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
                  >
                    TEST_PROJECT
                  </p>
                </a>
                <span
                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
                  data-icon="main-chevron-right"
                >
                  <svg
                    height="8"
                    viewBox="0 0 8 14"
                    width="8"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                      fill="#4d5969"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
              >
                <a
                  class="Breadcrumbs--breadcrumb"
                  href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
                  >
                    pipelines
                  </p>
                </a>
                <span
                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
                  data-icon="main-chevron-right"
                >
                  <svg
                    height="8"
                    viewBox="0 0 8 14"
                    width="8"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                      fill="#4d5969"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
              >
                <a
                  class="Breadcrumbs--breadcrumb"
                  href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
                  >
                    common.pipeline
                  </p>
                </a>
                <span
                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
                  data-icon="main-chevron-right"
                >
                  <svg
                    height="8"
                    viewBox="0 0 8 14"
                    width="8"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                      fill="#4d5969"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="actionsBar"
            >
              <span
                class="StyledProps--font StyledProps--main duration StyledProps--inline"
                style="display: inline-flex; align-items: center;"
              >
                <span
                  class="bp3-icon bp3-icon-time StyledProps--main Text--icon StyledProps--padding-right-xsmall"
                  icon="time"
                >
                  <svg
                    data-icon="time"
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                  >
                    <desc>
                      time
                    </desc>
                    <path
                      d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm1-6.41V4c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .28.11.53.29.71l2 2a1.003 1.003 0 001.42-1.42L9 7.59z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                 
                
              </span>
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-secondary Button--size Button--small"
                type="button"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                  data-icon="main-view"
                >
                  <svg
                    height="16"
                    viewBox="0 0 14 9"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7 3.5c-.5 0-.9.4-.9.9s.4.9.9.9.9-.4.9-.9-.4-.9-.9-.9zm7 .9c0-.1 0-.1 0 0 0-.2-.1-.3-.1-.4-.4-.6-1-1.1-1.5-1.6-1.2-1-2.5-1.9-4-2.2C7.5 0 6.7-.1 5.8.1 5 .3 4.3.6 3.6 1c-1.1.6-2.1 1.5-3 2.4-.2.2-.3.4-.5.6-.1.2-.1.5 0 .8.4.6 1 1.1 1.5 1.6 1.2 1 2.5 1.9 4 2.2.8.2 1.7.2 2.6 0 .8-.1 1.5-.4 2.2-.8 1.1-.6 2.1-1.5 3-2.4.2-.2.3-.4.5-.6 0-.1.1-.2.1-.3v-.1zM7 7C5.6 7 4.4 5.8 4.4 4.4S5.6 1.7 7 1.7s2.6 1.2 2.6 2.6S8.5 7 7 7z"
                      fill="#4d5969"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  common.viewText
                </span>
              </button>
              <div
                class="main"
              >
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main more Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                      type="button"
                    >
                      <span
                        class="bp3-icon bp3-icon-more StyledProps--main"
                        icon="more"
                      >
                        <svg
                          data-icon="more"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            more
                          </desc>
                          <path
                            d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="titleContainer"
          >
            <div
              class="title"
            />
            <div
              class="pipelineId"
            >
              execution.pipelineIdentifierTextCD
            </div>
          </div>
        </header>
        <div
          class="main"
        >
          <div
            class="metaContainer"
          />
          <div
            class="userLabelContainer"
          >
            <div
              class="wrapper"
            >
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <div
                    class="userLabel"
                    tabindex="0"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="nav-user-profile"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 24 24"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M11.5 2C5.701 2 1 6.701 1 12.5S5.701 23 11.5 23 22 18.299 22 12.5 17.299 2 11.5 2zm0 3.151a3.152 3.152 0 11-3.152 3.152A3.144 3.144 0 0111.5 5.151zm0 14.936a7.558 7.558 0 01-6.296-3.383c0-2.09 4.197-3.233 6.296-3.233s6.266 1.142 6.296 3.233a7.558 7.558 0 01-6.296 3.354z"
                          fill="#747d88"
                        />
                      </svg>
                    </span>
                    <div
                      class="userDetails"
                    >
                      <p
                        class="StyledProps--font StyledProps--main"
                      >
                        
                      </p>
                    </div>
                  </div>
                </span>
              </span>
            </div>
          </div>
        </div>
      </header>
      <div
        class="main"
      >
        <div>
          <div
            class="bp3-tabs Tabs--main Tabs--horizontal"
          >
            <div
              class="bp3-tab-list"
              role="tablist"
            >
              <div
                class="bp3-tab-indicator-wrapper"
                style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
              >
                <div
                  class="bp3-tab-indicator"
                />
              </div>
              <div
                aria-controls="bp3-tab-panel_execution-tabs_pipeline_view"
                aria-disabled="false"
                aria-expanded="true"
                aria-selected="true"
                class="bp3-tab"
                data-tab-id="pipeline_view"
                id="bp3-tab-title_execution-tabs_pipeline_view"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tabLink"
                  href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions/TEST_EXECUTION/pipeline"
                >
                  <span
                    class="bp3-icon bp3-icon-alignment-vertical-center StyledProps--main"
                    icon="alignment-vertical-center"
                  >
                    <svg
                      data-icon="alignment-vertical-center"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        alignment-vertical-center
                      </desc>
                      <path
                        d="M13 2H9V1c0-.55-.45-1-1-1S7 .45 7 1v1H3c-.55 0-1 .45-1 1v3c0 .55.45 1 1 1h4v2H6c-.55 0-1 .45-1 1v3c0 .55.45 1 1 1h1v1c0 .55.45 1 1 1s1-.45 1-1v-1h1c.55 0 1-.45 1-1v-3c0-.55-.45-1-1-1H9V7h4c.55 0 1-.45 1-1V3c0-.55-.45-1-1-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span>
                    common.pipeline
                  </span>
                </a>
              </div>
              <div
                aria-controls="bp3-tab-panel_execution-tabs_inputs_view"
                aria-disabled="false"
                aria-expanded="false"
                aria-selected="false"
                class="bp3-tab"
                data-tab-id="inputs_view"
                id="bp3-tab-title_execution-tabs_inputs_view"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tabLink"
                  href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions/TEST_EXECUTION/inputs"
                >
                  <span
                    class="bp3-icon bp3-icon-manually-entered-data StyledProps--main"
                    icon="manually-entered-data"
                  >
                    <svg
                      data-icon="manually-entered-data"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        manually-entered-data
                      </desc>
                      <path
                        d="M1 8h3.76l2-2H1c-.55 0-1 .45-1 1s.45 1 1 1zm14.49-4.01c.31-.32.51-.76.51-1.24C16 1.78 15.22 1 14.25 1c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.45-1.43zM1 4h7.76l2-2H1c-.55 0-1 .45-1 1s.45 1 1 1zm0 6c-.55 0-1 .45-1 1 0 .48.35.86.8.96L2.76 10H1zm9.95-6.43l-6.69 6.69 2.47 2.47 6.69-6.69-2.47-2.47zm4.25 2.47L13.24 8H15c.55 0 1-.45 1-1 0-.48-.35-.86-.8-.96zM2 15l3.86-1.39-2.46-2.44L2 15zm13-5h-3.76l-2 2H15c.55 0 1-.45 1-1s-.45-1-1-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span>
                    inputs
                  </span>
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          class="children"
        />
        <div
          class="viewToggle"
        >
          <span
            data-tooltip-id="consoleViewToggle"
          >
            consoleView
          </span>
          <label
            class="bp3-control bp3-switch"
          >
            <input
              name="console-view-toggle"
              type="checkbox"
            />
            <span
              class="bp3-control-indicator"
            />
          </label>
        </div>
      </div>
      <div
        class="childContainer"
        data-view="graph"
        id="pipeline-execution-container"
      >
        <div
          data-testid="children"
        >
          Execution Landing Page
        </div>
      </div>
    </div>
  </main>
</div>
`;
